@@ -1,3 +1,8 @@
+2008-10-16  Steven G. Kargl  <kargl@gcc.gnu.org>  (tiny patch)
+
+	* amd64fbsd-nat.c (amd64fbsd_supply_pcb): Conditionally compile in
+	support for pcb->pcb_{fs,ds,es,gs} on FreeBSD older than 8.0.
+
 2009-10-08  Paul Pluzhnikov  <ppluzhnikov@google.com>
 
 	PR gdb/10457
